# Jacobian

./: CMakeLists.txt  Makefile  benchmark.py  bpnn.c  bpnn.cpp  bpnn.hpp  checks.cpp  cnn.cpp  example.cpp  example.py  install.sh  kerasdemo.py  mr_bpnn.cpp  mr_bpnn_1.cpp  mr_bpnn_2.cpp  readme.md  setup.py  sweep.yaml  test.cpp  test.hpp  utils.cpp  utils.hpp
.github/workflows/: macos-latest.yml  test.yml  ubuntu-latest.yml
bench/: benchmark.py  kerasdemo.py  mlpack.cpp  pytorch.py  scikit.py
jacobian/: __init__.py  setup.py
mrbpnn/: __init__.py
scripts/: benchmark.py  example.py  kerasdemo.py  sweep.yaml
src/: bpnn.cpp  bpnn.hpp  capsnet.cpp  checks.cpp  cnn.cpp  cnn.hpp  data.cpp  graphs.cpp  mr_bpnn.cpp  mr_bpnn_1.cpp  mr_bpnn_2.cpp  optimizers.cpp  pybind.cpp  rnn.cpp  utils.cpp  utils.hpp
src/archive/: mr_bpnn.cpp  mr_bpnn_2.cpp
src/experimental/: activations.cpp  fileread.cpp  simd.cpp  strassen.cpp
tests/: fileread.cpp  simd.cpp  simd_simple.cpp  strassen.cpp
